# Anime4K-GUI

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD  data.go  ffmpeg.go  ffprobe.go  generate_asset_manifest.py  go.mod  go.sum  gui.go  hardware.go  main.go  pack_assets.py  sensors.go  settings.go  sleep.go  utils.go
assets/: data.json
ffmpeg/macos/lib/: libSvtAv1Enc.4.0.1.dylib  libX11.6.dylib  libXau.6.dylib  libXdmcp.6.dylib  libdav1d.7.dylib  liblcms2.2.dylib  liblzma.5.dylib  libmp3lame.0.dylib  libopus.0.dylib  libplacebo.360.dylib  libssl.3.dylib  libvpx.12.dylib  libvulkan.1.4.341.dylib  libx264.165.dylib  libxcb-render.0.0.0.dylib  libxcb-shape.0.0.0.dylib  libxcb-shm.0.0.0.dylib  libxcb-xfixes.0.0.0.dylib  libxcb.1.1.0.dylib
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt  imconfig.h  imgui_draw.cpp
lib/tiny-process-library/: CMakeLists.txt
resources/: appicon.rc  icon.icns
resources/shaders/: Anime4K_SRGAN_UUL.glsl
shaders/: Anime4K_SRGAN.glsl
src/: App.cpp  App.h  VideoLoader.cpp  VideoLoader.h  main.cpp  pch.h
src/Data/: Anime.h  Configuration.cpp  Configuration.h  Data.cpp  Data.h  Encoder.h  Resolution.h  Shader.h  UpscalingStatus.h  UpscalingStatus.hpp  Video.h
src/Hardware/: GpuDetector.cpp  GpuDetector.h
src/UI/: Renderer.cpp  Renderer.h  RendererUtilities.h
src/Utilities/: AssetLoader.cpp  AssetLoader.h  GpuDetector.cpp  Logger.h  Utilities.h  WindowUtilities.h  WindowsUtilities.h
src/Video/: VideoLoader.cpp  VideoLoader.h  VideoProcessor.cpp  VideoProcessor.h
